--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                     <div class="buttons">
                         <a href="https://happy-44.github.io/new_portfolio/"><button><i class="fa fa-link"> </i></button>
                         </a>
-                        <a href=""><button><i
+                        <a href="https://happy-44.github.io/main_portfolio/"><button><i
                                     class="fa fa-github"> </i></button>
                         </a>
                     </div>
@@ -535,6 +535,19 @@
                     <div class="buttons">
                         <a
                             href="https://github.com/happy-44/Rest-Api"><button><i
+                                    class="fa fa-github"> </i></button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <img src="ProjectImages/gate.png" alt="">
+                <div class="content">
+                    <h3>Stripe Project</h3>
+
+                    <div class="buttons">
+                        <a
+                            href="https://github.com/happy-44/stripe"><button><i
                                     class="fa fa-github"> </i></button>
                         </a>
                     </div>
