--- a/index.html
+++ b/index.html
@@ -491,9 +491,9 @@
                     <h3>Portfolio</h3>
 
                     <div class="buttons">
-                        <a href="https://happy-44.github.io/new_portfolio/"><button><i class="fa fa-link"> </i></button>
+                        <a href="https://happy-44.github.io/main_portfolio/"><button><i class="fa fa-link"> </i></button>
                         </a>
-                        <a href="https://happy-44.github.io/main_portfolio/"><button><i
+                        <a href="https://github.com/happy-44/main_portfolio"><button><i
                                     class="fa fa-github"> </i></button>
                         </a>
                     </div>
